--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -25,4 +25,4 @@ jobs:
         python-version: "3.10"
     - name: Test
       run: |
-        python test_main.py
+        python http_server.py & python test_main.py
